/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.8.2/userguide/building_java_projects.html
 */

/*plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}*/
    apply plugin: 'application'
    applicationDefaultJvmArgs = ["-DGOOGLE_APPLICATION_CREDENTIALS=/home/termux/gcloud-client/credentials.json"]


repositories {
    // Use JCenter for resolving dependencies.
    google()
    jcenter()
    mavenCentral()                                 //maven { url "https://jitpack.io" }
}

dependencies {
    // Use JUnit Jupiter API for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'

    // Use JUnit Jupiter Engine for testing.
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    // This dependency is used by the application.
    //implementation 'com.google.guava:guava:29.0-jre'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.20.0'
    implementation 'com.google.cloud:google-cloud-shell:2.28.0'
    implementation 'com.google.code.gson:gson:2.10'
}

application {
    // Define the main class for the application.
    mainClass = 'gcloud.client.App'
}

compileJava {
    options.release = 8
}

/*compileOptions {

        //Like these 
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }*/

tasks.named('test') {
    // Use junit platform for unit tests.
    useJUnitPlatform()
}
